--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -268,7 +268,8 @@ workflows:
   default:
     jobs:
       - build-frontend
-      - build-backend
+      - build-backend:
+          requires: [build-frontend]
       # - test-frontend:
       #     requires: [build-frontend]
       # - test-backend:
