--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -268,8 +268,7 @@ workflows:
   default:
     jobs:
       - build-frontend
-      - build-backend:
-          requires: [build-frontend]
+      - build-backend
       # - test-frontend:
       #     requires: [build-frontend]
       # - test-backend:
