--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,8 @@ jobs:
           name: front-end test
           command: |
             cd frontend
+            npm install
+            npm build
             npm run test
 
   test-backend:
