--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -5,10 +5,11 @@ Parameters:
   ID:
     Description: Unique identifier.
     Type: String
+    Default: kk1j667dhjjqmz437
 
 Resources:
   InstanceSecurityGroup:
-    Type: AWS::EC2::SecurityGroupsssss
+    Type: AWS::EC2::SecurityGroup
     Properties:
       GroupName: !Sub UdaPeople-${ID}
       GroupDescription: Allow port 22 and port 3030.
