--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -1,6 +1,5 @@
 ---
-
-- name: "configuration play." 
+- name: "configuration play."
   hosts: web
   user: ubuntu
   gather_facts: false
@@ -8,6 +7,13 @@
     - ansible_python_interpreter: /usr/bin/python3
     - ansible_host_key_checking: false
     - ansible_stdout_callback: yaml
+    - TYPEORM_CONNECTION: "{{ lookup('env','TYPEORM_CONNECTION') }}"
+    - TYPEORM_ENTITIES: "{{ lookup('env','TYPEORM_ENTITIES') }}"
+    - TYPEORM_HOST: "{{ lookup('env','TYPEORM_HOST') }}"
+    - TYPEORM_PORT: "{{ lookup('env','TYPEORM_PORT') }}"
+    - TYPEORM_USERNAME: "{{ lookup('env','TYPEORM_USERNAME') }}"
+    - TYPEORM_PASSWORD: "{{ lookup('env','TYPEORM_PASSWORD') }}"
+    - TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
 
   pre_tasks:
     - name: "wait 600 seconds for target connection to become reachable/usable."
@@ -17,4 +23,4 @@
       # Your code here
 
   roles:
-    # Your code here
+    - configure-server
