--- a/.circleci/files/frontend.yml
+++ b/.circleci/files/frontend.yml
@@ -11,7 +11,7 @@ Resources:
   WebsiteBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub "udapeople-${ID}"
+      BucketName: !Sub "udapeople-kk1j667dhjjqmz437"
       AccessControl: PublicRead
       WebsiteConfiguration:
         IndexDocument: index.html
