--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -14,6 +14,16 @@
     - TYPEORM_USERNAME: "{{ lookup('env','TYPEORM_USERNAME') }}"
     - TYPEORM_PASSWORD: "{{ lookup('env','TYPEORM_PASSWORD') }}"
     - TYPEORM_DATABASE: "{{ lookup('env','TYPEORM_DATABASE') }}"
-
+pre_tasks:
+    - name: "wait 600 seconds for target connection to become reachable/usable."
+      wait_for_connection:
+        timeout: 600
+    - name: "install python  for Ansible."
+      become: true
+      apt:
+        name: ["python3"]
+        state: latest
+        update_cache: yes
   roles:
     - configure-server
+    - configure-prometheus-node-exporter
