--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,8 +200,8 @@ jobs:
             cd backend
             sudo apt install python-pip jq curl
             sudo pip install awscli
-            npm i
-            npm audit fix --audit-level=critical 
+            npm install
+          # npm audit fix --audit-level=critical    
             npm run migrations >> output.txt
 
       - run:
