--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,7 +200,8 @@ jobs:
             cd backend
             sudo apt install python-pip jq curl
             sudo pip install awscli
-            npm install    
+            npm install  
+            npm run build  
             npm run migrations >> output.txt
 
       - run:
