--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,14 +194,14 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
+      - run: cd backend && npm install-
       - run:
           name: Run migrations
+          no_output_timeout: 10m
           command: |
             cd backend
             sudo apt install python-pip jq curl
-            sudo pip install awscli
-            npm install  
-            npm run build  
+            sudo pip install awscli 
             echo ENVIROMENT=development > ".env"
             echo TYPEORM_CONNECTION=postgres >> ".env"
             echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> ".env"
