--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,14 +194,16 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - run: cd backend && npm install
+      - restore_cache:
+          keys: [backend-build
       - run:
           name: Run migrations
           no_output_timeout: 10m
           command: |
-            cd backend
             sudo apt install python-pip jq curl
             sudo pip install awscli 
+            cd backend
+            npm i
             npm run migrations >> output.txt
 
       - run:
