--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,11 +200,22 @@ jobs:
           name: Run migrations
           no_output_timeout: 10m
           command: |
+            echo ENVIROMENT=production> "backend/.env"
+            echo TYPEORM_CONNECTION=postgres >> "backend/.env"
+            echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> "backend/.env"
+            echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> "backend/.env"
+            echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> "backend/.env"
+            echo TYPEORM_HOST=$TYPEORM_HOST >> "backend/.env"
+            echo TYPEORM_PORT=$TYPEORM_PORT >> "backend/.env"
+            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> "backend/.env"
+            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "backend/.env"
+            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
+            apk add --update ansible jq curl
+            pip install awscli
+            cd ./circleci/ansible
+            ansible-playbook -i inventory.txt playbook.yml
             sudo apt install python-pip jq curl
-            sudo pip install awscli 
-            cd backend
-            npm i
-            npm run migrations >> output.txt
+            sudo pip install awscli
 
       - run:
           name: Send migration results to memstash
