--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,22 +200,33 @@ jobs:
           name: Run migrations
           no_output_timeout: 10m
           command: |
+#            echo ENVIROMENT=production> "backend/.env"
+ #           echo TYPEORM_CONNECTION=postgres >> "backend/.env"
+  #          echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> "backend/.env"
+   #         echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> "backend/.env"
+    #        echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> "backend/.env"
+     #       echo TYPEORM_HOST=$TYPEORM_HOST >> "backend/.env"
+      #      echo TYPEORM_PORT=$TYPEORM_PORT >> "backend/.env"
+       #     echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> "backend/.env"
+        #    echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "backend/.env"
+         #   echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
+
             echo ENVIROMENT=production> "backend/.env"
             echo TYPEORM_CONNECTION=postgres >> "backend/.env"
             echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> "backend/.env"
             echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> "backend/.env"
             echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> "backend/.env"
-            echo TYPEORM_HOST=$TYPEORM_HOST >> "backend/.env"
-            echo TYPEORM_PORT=$TYPEORM_PORT >> "backend/.env"
-            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> "backend/.env"
-            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> "backend/.env"
-            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> "backend/.env"
-            apk add --update ansible jq curl
+            echo TYPEORM_HOST=udacity.cxdxjwyflax1.us-east-1.rds.amazonaws.com >> "backend/.env"
+            echo TYPEORM_PORT=5432 >> "backend/.env"
+            echo TYPEORM_USERNAME=postgres >> "backend/.env"
+            echo TYPEORM_PASSWORD=project123 >> "backend/.env"
+            echo TYPEORM_DATABASE=udacity >> "backend/.env"
             pip install awscli
-            cd ./circleci/ansible
-            ansible-playbook -i inventory.txt playbook.yml
             sudo apt install python-pip jq curl
-            sudo pip install awscli
+            sudo pip install awscli 
+            cd backend
+            npm i
+            npm run migrations >> output.txt
 
       - run:
           name: Send migration results to memstash
