--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,25 +194,23 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - restore_cache:
-          keys: [backend-build]
       - run:
           name: Run migrations
           no_output_timeout: 10m
           command: |
-            echo ENVIRONMENT=production> "backend/.env"
-            echo TYPEORM_CONNECTION=postgres >> "backend/.env"
-            echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> "backend/.env"
-            echo TYPEORM_ENTITIES=./src/modules/domain/**/*.entity.ts >> "backend/.env"
-            echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> "backend/.env"
-            echo TYPEORM_HOST=udacity.cxdxjwyflax1.us-east-1.rds.amazonaws.com >> "backend/.env"
-            echo TYPEORM_PORT=5432 >> "backend/.env"
-            echo TYPEORM_USERNAME=postgres >> "backend/.env"
-            echo TYPEORM_PASSWORD=project123 >> "backend/.env"
-            echo TYPEORM_DATABASE=udacity >> "backend/.env"
+            cd backend
+            echo ENVIROMENT=$ENVIROMENT > ".env"
+            echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> ".env"
+            echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> ".env"
+            echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> ".env"
+            echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> ".env"
+            echo TYPEORM_HOST=$TYPEORM_HOST >> ".env"
+            echo TYPEORM_PORT=$TYPEORM_PORT >> ".env"
+            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> ".env"
+            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> ".env"
+            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> ".env"
             sudo apt install python-pip jq curl
             sudo pip install awscli 
-            cd backend
             npm i
             npm run migrations >> output.txt
 
