--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,6 +213,7 @@ jobs:
             sudo pip install awscli 
             npm i
             npm run migrations >> output.txt
+            cat output.txt
 
       - run:
           name: Send migration results to memstash
