--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -240,6 +240,8 @@ jobs:
           name: Get backend url
           command: |
             cd frontend
+
+            sudo apt install python-pip jq curl
             sudo pip install awscli 
             yum -y install tar gzip
             BACKEND_IP=curl -H "token: 71542142-408e-460b-97e0-e34d677473f6" --request GET https://api.memstash.io/values/backend_ip
