--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -246,7 +246,7 @@ jobs:
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
             npm i
-            npm build
+            npm run build
       - run:
           name: Deploy frontend objects
           command: |
