--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -254,7 +254,7 @@ jobs:
           command: |
             sudo apt install python-pip jq curl
             sudo pip install awscli 
-            aws s3 cp ./frontend/dist s3://udapeople-${WorkflowID}/
+            aws s3 cp ./frontend/dist s3://udapeople-kk1j667dhjjqmz437/
       - destroy-environment
       - revert-migrations
 
@@ -301,7 +301,7 @@ jobs:
       - run:
           name: Frontend smoke test.
           command: |
-            URL="http://udapeople-${WorkflowID}.s3-website-us-east-1.amazonaws.com"
+            URL="http://udapeople-kk1j667dhjjqmz437.s3-website-us-east-1.amazonaws.com"
             if curl -s ${URL} | grep "Welcome"
             then
               return 0
