--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -284,14 +284,14 @@ jobs:
 
   smoke-test:
     docker:
-      - image: python:3.7-alpine3.11
+      - image: circleci/node:13.8.0
     steps:
       - checkout
       - run:
           name: Install dependencies
           command: |
-            sudo apt update
-            sudo apt upgrade
+            sudo apt install python-pip jq curl
+            sudo pip install awscli 
             sudo apt install curl
       - run:
           name: Get backend url and test
