--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -15,14 +15,17 @@ Resources:
       GroupDescription: Allow port 22 and port 3030.
       SecurityGroupIngress:
         - IpProtocol: tcp
-          FromPort: 0
-          ToPort: 65535
-          CidrIp: 0.0.0.0/
-      SecurityGroupEgress:
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 3030
+          ToPort: 3030
+          CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 0
           ToPort: 65535
-          CidrIp: 0.0.0.0/0
+          CidrIp: 0.0.0.0/
 
   EC2Instance:
     Type: AWS::EC2::Instance
