--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -39,11 +39,11 @@
   args:
     chdir: /root/backend
 
-# - name: "compile npm packages"
-#   become: true
-#   command: npm run build
-#   args:
-#     chdir: /root/backend
+- name: "compile npm packages"
+  become: true
+  command: npm run build
+  args:
+    chdir: /root/backend
 
 - name: "start server"
   become: true
