--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -309,7 +309,7 @@ jobs:
             else
               return 0
             fi
-
+      - destroy-environment
       - revert-migrations
 
 #   cloudfront-update:
