--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,34 +1,31 @@
 ---
-- name: Update apt packages.
+- name: "update apt packages."
   become: yes
   apt:
     update_cache: yes
-- name: Upgrade packages
+
+- name: "upgrade packages"
   become: yes
   apt:
-    upgrade: "yes"
-- name: Remove dependencies that are no longer required.
+    upgrade: yes
+
+- name: remove dependencies that are no longer required
   become: yes
   apt:
-    autoremove: "yes"
-- name: Remove dependencies that are no longer required.
+    autoremove: yes
+
+- name: "install dependencies."
   become: yes
   apt:
-    autoremove: "yes"
-- name: Install dependencies
-  become: yes
-  apt:
-    name: ["nodejs", "npm", "python3", "tar", "gzip", "git"]
+    name: ["nodejs", "npm"]
     state: latest
     update_cache: yes
-- name: install pm2
+
+- name: "install pm2"
   become: yes
   npm:
     name: pm2
     global: yes
     production: yes
     state: present
-- name: Create dist directory.
-  file:
-    path: "~/home/ubuntu/backend"
     state: directory
