--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,12 +1,11 @@
-- name: "upgrade packages."
-  become: true
-  apt:
-    upgrade: "yes"
+---
 - name: "install dependencies."
   become: true
   apt:
     name: ["nodejs", "npm"]
+    state: latest
     update_cache: yes
+
 - name: "install pm2"
   become: true
   npm:
@@ -15,62 +14,20 @@
     production: yes
     state: present
 
-- name: "copy backend file"
-  become: true
+- name: Copy backend dist files web server
   copy:
-    src: /home/circleci/project/backend
-    dest: /root/
-    force: no
+    src: /root/project/backend
+    dest: /home/ubuntu
 
-- name: Copy backend files
-  become: true
-  copy:
-    src: /etc/backend.tar.gz
-    dest: /root/backend.tar.gz
-
-- name: extract files
-  become: true
+- name: Install Node
   shell: |
-    tar xzvf backend.tar.gz --directory /root/
-
-- name: "install npm packages"
-  become: true
-  command: npm install
-  args:
-    chdir: /root/backend
-
-- name: "compile npm packages"
-  become: true
-  command: npm run build
-  args:
-    chdir: /root/backend
-
-- name: "start server"
-  become: true
-  command: pm2 start npm -- run start
-  args:
-    chdir: /root/backend/dist
-
-- name: "Create directory"
-  become: true
-  file:
-    path: ~/udapeople/
-    state: directory
-
-- name: "extract  backend"
-  become: true
-  unarchive:
-    src: /etc/backend.tar.gz
-    dest: ~/udapeople/
-
-- name: "install npm to  backend"
-  become: true
-  command: npm install
-  args:
-    chdir: ~/udapeople/
-
-- name: "run  backend"
-  become: true
-  command: pm2 start npm -- run start
-  args:
-    chdir: ~/udapeople/
+    cd /home/ubuntu/backend
+    npm install
+- name: Build Node
+  shell: |
+    cd /home/ubuntu/backend
+    npm run build
+- name: Start PM2
+  shell: |
+    cd /home/ubuntu/backend
+    pm2 start npm --name backend -- start
